--- a/css/style.css
+++ b/css/style.css
@@ -213,6 +213,26 @@ body {
     color: #9ca3af;
 }
 
+.imagem-box {
+    flex: 1;
+    aspect-ratio: 16/9;
+    background: #d1d5db;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.imagem-box img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 8px;
+}
+
+
+
 .btn {
     background: #2563eb;
     color: white;
